[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/shield_silver.png" type="Texture" id=1]
[ext_resource path="res://assets/UI/glassPanel_200.png" type="Texture" id=2]
[ext_resource path="res://assets/UI/barHorizontal_red_mid 200.png" type="Texture" id=3]
[ext_resource path="res://ui/HUD.gd" type="Script" id=4]
[ext_resource path="res://assets/UI/barHorizontal_white_mid 200.png" type="Texture" id=5]
[ext_resource path="res://assets/UI/dotWhite.png" type="Texture" id=6]
[ext_resource path="res://assets/grey_circle.png" type="Texture" id=7]

[sub_resource type="Animation" id=1]
resource_name = "healthbar_flash"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Margin/Container/HealthBar:texture_progress")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ), ExtResource( 5 ), ExtResource( 3 ) ]
}

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 4 )

[node name="Margin" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="Margin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0

[node name="Life" type="TextureRect" parent="Margin/Container"]
margin_right = 30.0
margin_bottom = 560.0
texture = ExtResource( 1 )

[node name="HealthBar" type="TextureProgress" parent="Margin/Container"]
margin_left = 34.0
margin_right = 234.0
margin_bottom = 560.0
value = 75.0
texture_over = ExtResource( 2 )
texture_progress = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Margin/Container/HealthBar"]

[node name="VSeparator" type="VSeparator" parent="Margin/Container"]
visible = false
margin_left = 238.0
margin_right = 242.0
margin_bottom = 560.0

[node name="AmmoGauge" type="TextureProgress" parent="Margin/Container"]
margin_left = 238.0
margin_right = 286.0
margin_bottom = 560.0
value = 60.0
texture_progress = ExtResource( 7 )
fill_mode = 4
radial_initial_angle = 270.0
radial_fill_degrees = 180.0

[node name="VSeparator2" type="VSeparator" parent="Margin/Container"]
visible = false
margin_left = 290.0
margin_right = 294.0
margin_bottom = 560.0

[node name="Points" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 238.0
margin_right = 262.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points2" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 266.0
margin_right = 290.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points3" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 294.0
margin_right = 318.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points4" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 322.0
margin_right = 346.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points5" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 350.0
margin_right = 374.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points6" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 378.0
margin_right = 402.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points7" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 406.0
margin_right = 430.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points8" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 434.0
margin_right = 458.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points9" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 434.0
margin_right = 458.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="Points10" type="TextureRect" parent="Margin/Container"]
visible = false
margin_left = 462.0
margin_right = 486.0
margin_bottom = 560.0
texture = ExtResource( 6 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/healthbar_flash = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
